--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "validator": "^13.0.0"
